# jobagent

./: .gitignore  CLAUDE.md  PLAN.md  package.json
crawler/: apply_now.py  crawl_orchestrator.py  pyproject.toml
crawler/jobcrawler/: items.py  middlewares.py  pipelines.py  settings.py
crawler/jobcrawler/ai/: claude_client.py  cover_letter.py  job_scorer.py  resume_parser.py
crawler/jobcrawler/db/: queries.py  supabase_client.py
crawler/jobcrawler/playwright_spiders/: agent_applier.py  auto_applier.py  indeed_applier.py  linkedin_applier.py
crawler/jobcrawler/spiders/: base_spider.py  company_spider.py  indeed_spider.py  linkedin_spider.py
crawler/tests/: test_pipelines.py
dashboard/: middleware.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/app/auto-apply/: page.tsx
dashboard/app/companies/: page.tsx
dashboard/app/crawl-log/: page.tsx
dashboard/app/email-agent/: page.tsx
dashboard/app/jobs/: page.tsx
dashboard/app/login/: page.tsx
dashboard/app/pipeline/: page.tsx
dashboard/lib/: auth.ts  preference-learner.ts  user-context.ts
dashboard/scripts/: run-crawl.ts  test-crawl.ts
dashboard/types/: chromium.d.ts
email_agent/: __init__.py  agent_loop.py  classifier.py  config.py  email_importer.py  email_parser.py  gmail_client.py  import_emails.py  pyproject.toml  response_engine.py
email_agent/tests/: test_classifier.py  test_email_parser.py  test_response_engine.py
scripts/: com.dawson.jobcrawler.plist  install_cron.sh  setup.sh
supabase/migrations/: 20260318_bakery_email_agent.sql
(+38 files in other folders)
